[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/building/building.gd" type="Script" id=1]
[ext_resource path="res://assets/buildings/field.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.203922, 0.517647, 0.0862745, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.5116, 17.7397 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50.003, 40.3424 )

[node name="Building" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -35.0
margin_top = 38.0
margin_right = 35.0
margin_bottom = 52.0
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 14 )
text = "40 / 100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource( 3 )

[node name="OccupiedSpaceArea" type="Area2D" parent="."]
collision_layer = 2148007936
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="OccupiedSpaceArea"]
shape = SubResource( 4 )

[connection signal="body_entered" from="TriggerArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="." method="_on_body_exited"]
